--- a/w01assignment/css/small.css
+++ b/w01assignment/css/small.css
@@ -1,8 +1,9 @@
 body {
-    max-width: 500px;
+    max-width: 600px;
     text-align: center;
     font-family: 'Merriweather', serif;
     margin-left: 50px;
+    align-self: center;
 }
 .name,
 footer {
