--- a/lesson02/css/smallView.css
+++ b/lesson02/css/smallView.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Ubuntu:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:wght@300&family=Ubuntu:wght@300&display=swap');
 /*style for body*/
 body {
     font-family: 'Lato', sans-serif;
@@ -64,7 +63,7 @@ a:hover {
 }
 p {
     font-size: 14px;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Open Sans', sans-serif;;
     letter-spacing: 0.1em;
     padding: 10px;
 }
