--- a/lesson02/css/smallView.css
+++ b/lesson02/css/smallView.css
@@ -41,10 +41,10 @@ main {
     
 }
 h3{
-    font-size: 20px;
+    font-size: 24px;
     background-color: rgb(18, 121, 231);
     text-align: center;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     
 
@@ -63,7 +63,7 @@ a:hover {
 }
 p {
     font-size: 14px;
-    font-family: 'Open Sans', sans-serif;;
+    font-family: 'Open Sans', sans-serif;
     letter-spacing: 0.1em;
     padding: 10px;
 }
