--- a/lesson02/css/smallView.css
+++ b/lesson02/css/smallView.css
@@ -36,21 +36,24 @@ main {
 .section2,
 .section3 {
     background-color: rgb(144, 175, 233);
-    border-radius: 10px;
-    
-    
+    border-radius: 10px 10px 0px 0px; 
 }
-h3{
+.card{
     font-size: 24px;
     background-color: rgb(18, 121, 231);
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
-    
-
+    padding-top: 10px;
+}
+h3 {   
+    padding-left:0.5rem;  
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    font-size: 16px;
 }
 img {
-    max-width:75%;
+    max-width:50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -75,8 +78,6 @@ footer {
 	padding: 10px;
     max-height: 200px;
 	background-color: rgb(27, 142, 230);
-	box-shadow: 0 0 30px;
-    border-radius: 15px;
     text-align: center;
 }
 
