--- a/lesson02/css/smallView.css
+++ b/lesson02/css/smallView.css
@@ -2,7 +2,7 @@
 /*style for body*/
 body {
     font-family: 'Lato', sans-serif;
-    max-width: 500px;
+    max-width: 1040px;
     margin: auto;
 }
 
@@ -45,6 +45,7 @@ main {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     padding-top: 10px;
+    color:aliceblue
 }
 h3 {   
     padding-left:0.5rem;  
