--- a/lesson03/css/main.css
+++ b/lesson03/css/main.css
@@ -1,8 +1,15 @@
+/*----------------homepage-----------------*/
 #content {
     max-width: 600px;
     margin: 0 auto;
     border: #104911;
     border-style: double;
+    text-align: justify;
+    
+}
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size:16px;
 }
 /*header*/
 #heading {
@@ -40,6 +47,8 @@ nav div :hover {
 h1 {
     color:antiquewhite;
     font-size: 20px;
+    font-family: 'Otomanopee One', sans-serif;
+    font-weight: bold;
 }
 
 /*main*/
@@ -66,17 +75,25 @@ footer{
     box-shadow: 10px;
 }
 
-/*color-scheme specific css*/
+/*------------------color-scheme specific css--------------------------*/
 :root {
     --primary-color: #ffffff;
     --secondary-color: #104911;
     --accent1-color: #ffd449;
     --accent2-color: #F9A620;
   }
+.color, .target, .typo{
+  color:#104911;
+  text-align: left;
+  margin:30px;
+  font-size: 32px;
+  font-family: 'Otomanopee One', sans-serif;
+}
 .colors {
     width: 100%;
     min-width: 350px;
     margin: auto;
+    padding-bottom: 100px;
     text-align: center;
   }
 .colors th {
@@ -103,3 +120,27 @@ p.colored {
     background-color: var(--paragraph-background-color);
     color: var(--paragraph-color-on-color);
   }
+/*----------Target Audience*------------------*/
+h2{
+  font-family: 'Otomanopee One', sans-serif;
+}
+h3{
+  font-family: 'Otomanopee One', sans-serif;
+  font-style: italic;
+}
+#typographie-content {
+  margin-left: 30px;
+  text-align: justify;
+  margin-right: 30px;
+}
+.heading-fonts{
+  font-family: 'Otomanopee One', sans-serif;
+}
+#target-sub {
+  margin-left: 30px;
+  margin-right: 30px;
+  align-items: justify;
+}
+.colored-text{
+  background-color: #F9A620;
+}
