--- a/lesson03/css/main.css
+++ b/lesson03/css/main.css
@@ -18,6 +18,12 @@ p {
     grid-template-columns: 100px auto;
     align-items:center;   
 }
+.site-name {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  margin-right: 30px;
+}
 .logo-box> img{
     width:5em;
     padding-left: 10px;
@@ -72,7 +78,6 @@ footer{
     padding: 10px;
     color: antiquewhite;
     border-radius: 5px;
-    box-shadow: 10px;
 }
 
 /*------------------color-scheme specific css--------------------------*/
@@ -130,16 +135,11 @@ h3{
 }
 #typographie-content {
   margin-left: 30px;
-  text-align: justify;
   margin-right: 30px;
-}
-.heading-fonts{
-  font-family: 'Otomanopee One', sans-serif;
 }
 #target-sub {
   margin-left: 30px;
   margin-right: 30px;
-  align-items: justify;
 }
 .colored-text{
   background-color: #F9A620;
