--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,24 +1,24 @@
 /* Larger viewports */
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 60em) {
 	body {
 		max-width: 1980px;
 	}
 
 	#site-name {
 		font-size: 36px;
-		justify-content: left;
 	}
 	
 	nav ul li a{
 		padding:1rem;
 		font-size: 16px;
 		justify-content: center;
-		
+		border:none;
+		background-color: transparent;
 	}
 	.social a img{
-		width: 3em;
-		margin-right:0;
-		justify-content: right;
+		display:inline-flex;
+		
+		
 	}
 	nav button{
         display: none;
@@ -28,5 +28,74 @@
         margin-left: 1vw;
         margin-top:30px;
         margin-bottom:0px;
+    }
+	main{
+		display:grid;
+		grid-template-columns: repeat(4 1fr);
+	}
+	.container2{
+		grid-column:1;
+		grid-row:1;
+		margin-right:0px;
+	}
+	.container3 {
+		grid-column: 1;
+		grid-row:2;
+		margin-left:20px;
+		margin-right:0px;
+	}
+	.container4 {
+		grid-column: 1;
+		grid-row:3;
+		margin-right:0px;
+	}
+	.container {
+		grid-column: 2/4;
+		grid-row: 1/3;
+		margin:0px;
+	}
+	.container1{
+		grid-column: 2/4;
+		grid-row: 3;
+		margin:0px;
+	}
+	.container5{
+		grid-column: 4;
+		grid-row:1/4;
+		display:grid;
+		grid-template-columns: 1fr;
+		grid-auto-rows: minmax(100px, auto);
+        padding: 30px;
+		margin-left:0px;
+		grid-gap:0px;
+		
+	}
+	.container5 div#spot3{
+		display:block;
+		grid-row:3;
+		
+	}
+	.container5 div{
+		border:#104911;
+    	border: 1px solid #104911;
+        padding: 15px;
+		margin:0px;
+		
+	}
+	/*footer*/
+	#signature-large {
+		display:block;
+		
+	}
+	#signature-medium {
+		display: none;
+	}
+	.m {
+		text-align: center;
+		border-top: 1px solid whitesmoke;
+		padding: 20px;	
+	}
+	#contact{
+		margin-right: 20px;;
     }
 }
