--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -15,6 +15,7 @@ header img {
 header {
 	margin: 0 auto;
     background-color: #104911;
+    margin-bottom:10px;
 }
 
 #site-logo {
@@ -33,11 +34,20 @@ header {
 }
 
 .social img {
+    display: inline-flex;
     width: 25px;
     height: auto;
     margin-top: 20px;
     }
+.social #fb{
+    padding-right: 20px;
+}
+
+h1 {
+    margin-right: 10rem;
+}
 nav a{
+    
     text-decoration: none ;
     font-size: 10px ;
     font-family: 'Otomanopee One', sans-serif;;
@@ -56,7 +66,9 @@ nav ul{
 }
 nav button {
     margin:0.2rem 2vw;
-    background-color: whitesmoke;
+    background-color: transparent;
+    font-weight:bold;
+    color: white;
     border: none;
     font-size: 2rem;
     margin-top: 0.5em;
@@ -75,6 +87,12 @@ nav ul li a:hover{
 }
 nav ul.open {
     display:block;
+    position:fixed;
+    top: 70px;
+    right:10px;
+    width: 30%;
+    height: inherit;
+    text-align: center;
 }
 #hamburgerBtn span:nth-child(1) {
     display:block;
@@ -95,12 +113,16 @@ nav ul.open {
     text-align:center;
     color:antiquewhite;
     font-family: Montserrat,sans-serif;
+    margin-left:10px;
+    margin-right:10px;
+    padding: 0.5rem;
+    border-radius: 1rem;
 }
 /*main*/
 main{
     display: grid;
     grid-gap: 10px;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 .container,
 .container1,
