--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,60 +1,62 @@
 body {
-    max-width: 1080px;
-    margin: 0 auto;
+    margin: 0;
+    padding: 0;
 }
 /*header*/
+header {
+	margin: 0 auto;
+    padding-bottom:0.2em;
+    background-color: #104911;
+}
+
 .headings {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+
 }
 header img {
 		width: 100%;
 	}
 
-header {
-	margin: 0 auto;
-    background-color: #104911;
-    margin-bottom:10px;
+
+header .headings #logo {
+    display: flex;
+}
+header #navigation {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 10px;
+    margin-right: 10px;
+
 }
 
-#site-logo {
-        width:5em;
+#site-logo img{
+        width:5rem;
         padding-left: 10px;
-        padding-top: 10px;
-        padding-bottom: 10px;
 	    height: auto;    
 }
 #site-name{
-    display:flex;
+    /*display:flex;*/
     color:antiquewhite;
-    font-size: 1.5rem;
+    font-size:1rem;
     font-family: 'Otomanopee One', sans-serif;
     margin-left:20px;
+    margin-right: 10rem;
 }
 
 .social img {
-    display: inline-flex;
+   /*display: inline-flex;*/
     width: 25px;
     height: auto;
-    margin-top: 20px;
+    margin-right: 20px;
     }
-.social #fb{
-    padding-right: 20px;
-}
-
-h1 {
-    margin-right: 10rem;
-}
 nav a{
-    
     text-decoration: none ;
     font-size: 10px ;
-    font-family: 'Otomanopee One', sans-serif;;
+    font-family: 'Otomanopee One', sans-serif;
     color:antiquewhite;
     border: 1px solid #ffd449;
     background-color: #257705;
-    padding:0;
     
 }
 nav ul{
@@ -65,17 +67,15 @@ nav ul{
     
 }
 nav button {
-    margin:0.2rem 2vw;
     background-color: transparent;
-    font-weight:bold;
     color: white;
     border: none;
-    font-size: 2rem;
-    margin-top: 0.5em;
+    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
 nav ul li a{
     display:block;
-    padding:.8rem 2vw;
+    padding:10px 10px 20px;
     text-decoration: none;
 
 }
@@ -83,16 +83,19 @@ nav ul li.active a{
     color:#F9A620;
 }
 nav ul li a:hover {
-    color: #F9A620 ;
+    opacity: 1;
+	background-color: rgb(236, 240, 16);
+    color: #0f0f0f ;
+    background-image: linear-gradient(white, #104911);
 }
 nav ul.open {
     display:block;
     position:fixed;
-    top: 70px;
-    right:10px;
+    text-align: center;
+    top: 10rem;
+    left: 16rem;
     width: 30%;
     height: inherit;
-    text-align: center;
 }
 #hamburgerBtn span:nth-child(1) {
     display:block;
@@ -112,25 +115,31 @@ nav ul.open {
     text-align:center;
     color:antiquewhite;
     font-family: Montserrat,sans-serif;
-    margin-left:10px;
-    margin-right:10px;
-    padding: 0.5rem;
+    margin:0px 10px 10px;
     border-radius: 1rem;
 }
 .banner {
     color:antiquewhite;
     font-weight: bold;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     font-family: Montserrat,sans-serif;
+    padding-top: 10px; 
+    margin-left: 10px;
+    margin-right: 10px;
     margin-bottom: 10px;
 
 }
 /*main*/
+h3 {
+    display:none;
+}
 main{
+    justify-content: center;
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 5px;
     padding-top: 10px;
+    margin:0;
 }
 .container,
 .container1,
@@ -138,12 +147,40 @@ main{
 .container3,
 .container4,
 .container5{
-    padding: 80px;
     background-color: #ffd449;
     border: 1px solid #104911;
     margin-left:20px;
     margin-right:20px;
     font-family: Montserrat,sans-serif;
+}
+.container {
+    padding:0px;
+}
+main .container .hero {
+    width: 100%;
+    height: 12rem;
+}
+.container3 {
+    border-bottom: 10px solid #104911;
+    justify-items: center;
+    padding:0.4rem;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(white, #ffd449);
+}
+.container3 img{
+    width: 30%; 
+    
+}
+h3 {
+    text-align: center;
+    text-decoration:underline;
+}
+.container3 .wea, p{
+    margin:0.2rem;
+    text-align: center;
+    font-size: large;
+    font-weight: bolder;
 }
 .container4{
    display:none;
