--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,15 +1,29 @@
 /* Larger viewports */
-@media only screen and (min-width: 60em) {
-	body {
-		max-width: 1980px;
+@media only screen and (min-width: 64rem) {
+	body{
+		max-width: 1700px;
+	}
+	header #navigation {
+		display: flex;
+		flex-direction: row;
+		justify-content: flex-end;
 	}
 
 	#site-name {
 		font-size: 36px;
+		padding-top:20px;
 	}
-	
+	#site-logo {
+        width:10rem;
+        padding-left: 20px;
+	    height: auto; 
+		padding-bottom: 0px;
+	}
+	#site-logo img{
+        width:9rem;
+}
 	nav ul li a{
-		padding:1rem;
+		padding: 1rem;
 		font-size: 16px;
 		justify-content: center;
 		border:none;
@@ -17,7 +31,8 @@
 	}
 	.social a img{
 		display:inline-flex;
-		
+		width:20%;
+		margin-left: 20px;
 		
 	}
 	nav button{
@@ -26,10 +41,13 @@
 	nav ul#primaryNav {
         display:flex;
         margin-left: 1vw;
-        margin-top:30px;
         margin-bottom:0px;
     }
-	main{
+	.banner {
+		font-size: 20px;
+		font-family: Montserrat,sans-serif;
+	}
+	main{ 
 		display:grid;
 		grid-template-columns: repeat(4 1fr);
 	}
@@ -44,6 +62,7 @@
 		margin-left:20px;
 		margin-right:0px;
 	}
+	
 	.container4 {
 		grid-column: 1;
 		grid-row:3;
@@ -79,8 +98,11 @@
 		border:#104911;
     	border: 1px solid #104911;
         padding: 15px;
-		margin:0px;
-		
+		margin:0px;	
+	}
+	container .hero {
+		min-height: 12rem;
+    	height: 100%;
 	}
 	/*footer*/
 	#signature-large {
@@ -96,6 +118,10 @@
 		padding: 20px;	
 	}
 	#contact{
-		margin-right: 20px;;
+		margin-right: 20px;
+		
     }
+	.site-name-footer p {
+		margin-top: 25px;
+	}
 }
