--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -152,9 +152,10 @@ main{
     margin-left:20px;
     margin-right:20px;
     font-family: Montserrat,sans-serif;
+    text-align: center;
 }
 .container {
-    padding:0px;
+    padding:10px;
 }
 main .container .hero {
     width: 100%;
@@ -181,6 +182,12 @@ h3 {
     text-align: center;
     font-size: large;
     font-weight: bolder;
+}
+.container3 h4{
+    font-size: 16px;
+    text-decoration: underline;
+    font-weight: bold;
+    font-family: 'Otomanopee One', sans-serif;
 }
 .container4{
    display:none;
