--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -49,7 +49,7 @@
 	/*main*/
 	main{ 
 		display:grid;
-		grid-template-columns: repeat(4 1fr);
+		grid-template-columns: repeat(4, 1fr);
 		grid-gap:10px;
 	}
 	.container2{
