--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,4 +1,5 @@
 body {
+    max-width:600px;
     margin: 0;
     padding: 0;
 }
@@ -42,6 +43,9 @@ header #navigation {
     font-family: 'Otomanopee One', sans-serif;
     margin-left:20px;
     margin-right: 10rem;
+}
+.headings #logo{
+    margin-top: 10px;
 }
 
 .social img {
@@ -97,6 +101,9 @@ nav ul.open {
     width: 30%;
     height: inherit;
 }
+nav #hamburgerBtn span{
+    margin-right:20px;
+}
 #hamburgerBtn span:nth-child(1) {
     display:block;
 }
@@ -117,18 +124,33 @@ nav ul.open {
     font-family: Montserrat,sans-serif;
     margin:0px 10px 10px;
     border-radius: 1rem;
+    font-size:12px;
 }
 .banner {
     color:antiquewhite;
     font-weight: bold;
     text-align: center;
-    font-size: 16px;
+    font-size: 12px;
     font-family: Montserrat,sans-serif;
     padding-top: 10px; 
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
 
+}
+/* discover ==> header*/
+.visits{
+    background-color: #257705;
+    padding:8px;
+    font-family: Montserrat,sans-serif;
+    font-size: 14px;
+    text-align: center;
+} 
+.discover p{
+    font-family: Montserrat,sans-serif;
+}
+.discover h3 {
+    display: block;
 }
 /*main*/
 h3 {
@@ -208,6 +230,14 @@ h3 {
 }
 .container5 div#spot3{
     display:none;
+}
+/*discover main*/
+.discover main{
+    display: block;
+}
+.discover h2 {
+    text-align: center;
+    font-family: 'Otomanopee One', sans-serif;;
 }
 /*footer*/
 footer{
