error on js file fixed

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -271,7 +271,7 @@ h3 {
     border-radius: 10px;
 	background-color:#ffd449;
 }
-.visits{
+.numbvisits{
     background-color: #257705;
     padding:8px;
     font-family: Montserrat,sans-serif;
