--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -8,12 +8,13 @@
         display:block;
         position:fixed;
         text-align: center;
-        top: 12rem;
-        left: 38rem;
+        top: 4rem;
+        left: 30rem;
         height: inherit;
+        z-index:1;
     }
     nav ul li a{
-		padding:2rem 1rem;
+		padding:1.2rem 0.5rem;
 		font-size: 12px;
 	}
     nav button {
@@ -50,6 +51,9 @@
         font-size: 18px;
     }
     /*main*/
+    main{
+        max-width: 760px;
+    }
     .container,
     .container1 {
         grid-column: 1/4;
@@ -89,6 +93,17 @@
         grid-template-columns: 1fr 1fr;
         grid-gap:5px;
     }
+    .discover #mining{
+        display: grid;
+        grid-template-columns: fit-content(300px) 1fr;
+        grid-template-rows:1fr auto;
+        grid-column: 1/span 2;
+        margin-top:5px;
+    }
+    .discover #mining img {
+        position: relative;
+        float: right;
+    }
     /*footer*/
     footer {
         text-align: left;
@@ -109,9 +124,17 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+        margin-left:50px;
+        margin-bottom:10px;
+        width:30%;
+    }
+    .site-name-footer p{
+        padding-top:20px;
+        padding-right:30px;
     }
     .address-contact {
         display:flex;
+        padding-right:10px;
     }
     #contact{
         display: flex;
