--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,3 +1,5 @@
+/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
+html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
     max-width:600px;
     margin: 0;
@@ -286,6 +288,18 @@ h3 {
     text-align: center;
     font-weight: bold;
 } 
+/*join*/
+fieldset {
+    background-color:#ffd449 ;
+    border:2px solid #104911;
+    font-family: Montserrat, sans-serif;
+    font-weight: bold;
+}
+fieldset h4{
+    font-family: 'Otomanopee One', sans-serif;
+    font-size: 24px;
+}
+
 /*footer*/
 footer{
     background-color: #104911;
