--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -154,4 +154,38 @@
 	.site-name-footer p {
 		margin-top: 25px;
 	}
+	/*wireframes*/
+	#wf{
+		max-width:1200px;
+		margin: 0;
+		margin-left: 5rem;
+	}
+ 
+	.wireframe {
+        display:grid;
+        grid-template-columns:max-content;
+
+    }
+	#small2 {
+		grid-column: 1;
+		padding-left: 20px;
+	}
+	#medium2 {
+		grid-column: 1;
+		padding-left: 20px;
+	}
+	#wf h4{
+		text-align: left;
+	}
+	#sm{
+		display: flex;
+		width:80%
+	}
+	img #sm{
+		width:50%
+	}
+	#md {
+		display: flex;
+	}
+	
 }
