--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -140,4 +140,29 @@
         display: flex;
         flex-direction: column;  
     }
+    /*wireframes*/
+    body #wf{
+        max-width:960px;
+    }
+    .wireframe{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    #small1 {
+        grid-column: 1;
+    }
+    #small2 {
+        grid-column: 2;
+    }
+    #medium1 {
+        grid-column: 1;
+    }
+    #medium2 {
+        grid-column: 2;
+    }
+    #large {
+        grid-row: 3;
+    }
+
+
 }
