--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -187,5 +187,12 @@
 	#md {
 		display: flex;
 	}
-	
+	 /*directory page*/
+	 .business-cards{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+	#busdirectory {
+		display: block;
+	}
+
 }
