--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,9 +1,9 @@
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 body {
-    max-width:600px;
     margin: 0;
     padding: 0;
+    max-width: 940px;
 }
 /*header*/
 header {
@@ -16,23 +16,27 @@ header {
 .headings {
     display: flex;
     flex-direction: column;
-
 }
+.headings 
 header img {
 		width: 100%;
 	}
 
 
-header .headings #logo {
-    display: flex;
+.headings #logo {
+    display: grid;
+    grid-template-columns: repeat(1fr);
     margin-top: 10px;
+}
+.headings #site-logo{
+    display:flex;
+    flex-direction: row;
 }
 header #navigation {
     display: flex;
     flex-direction: row-reverse;
     margin-bottom: 10px;
     margin-right: 10px;
-
 }
 
 #site-logo img{
@@ -41,19 +45,14 @@ header #navigation {
 	    height: auto;    
 }
 #site-name{
-    /*display:flex;*/
     color:antiquewhite;
     font-size:1rem;
     font-family: 'Otomanopee One', sans-serif;
     margin-left:20px;
     margin-right: 10rem;
 }
-.headings #logo{
-    
-}
 
 .social img {
-   /*display: inline-flex;*/
     width: 25px;
     height: auto;
     margin-right: 20px;
@@ -64,8 +63,7 @@ nav a{
     font-family: 'Otomanopee One', sans-serif;
     color:antiquewhite;
     border: 1px solid #ffd449;
-    background-color: #257705;
-    
+    background-color:#104911;
 }
 nav ul{
     list-style-type:none;
@@ -100,10 +98,11 @@ nav ul.open {
     display:block;
     position:fixed;
     text-align: center;
-    top: 10rem;
-    left: 16rem;
+    top: 8rem;
+    left: 10rem;
     width: 30%;
     height: inherit;
+    z-index:1;
 }
 nav #hamburgerBtn span{
     margin-right:20px;
@@ -121,7 +120,7 @@ nav #hamburgerBtn span{
     display:block;
 }
 .date {
-    background-color: #257705;
+    background-image: linear-gradient(#ffd449, #104911, black);
     padding:10px;
     text-align:center;
     color:antiquewhite;
@@ -140,7 +139,6 @@ nav #hamburgerBtn span{
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 10px;
-
 }
 /* discover ==> header*/
 
@@ -149,6 +147,7 @@ nav #hamburgerBtn span{
 }
 .discover h3 {
     display: block;
+
 }
 /*main*/
 h3 {
@@ -157,34 +156,37 @@ h3 {
 main{
     justify-content: center;
     display: grid;
+    grid-template-columns: 1fr;
     grid-gap: 5px;
     padding-top: 10px;
-    margin:10px auto;
 }
 main img{
     width:100%;
 }
-.container,
-.container1,
-.container2,
-.container3,
-.container4,
-.container5{
+.hero-section,
+.release,
+.event,
+.weather,
+.join,
+.spotlights{
     background-color: #ffd449;
     border: 1px solid #104911;
     margin-left:20px;
     margin-right:20px;
     font-family: Montserrat,sans-serif;
     text-align: center;
+    padding:40px;
+    border-radius: 10px 10px 10px 10px;
 }
-.container {
+.hero-section {
     padding:10px;
+    grid-row: 1;
 }
-main .container .hero {
-    width: 100%;
+main .hero {
+    width: auto;
     height: 12rem;
 }
-.container3 {
+.weather {
     border-bottom: 10px solid #104911;
     justify-items: center;
     padding:0.4rem;
@@ -192,61 +194,61 @@ main .container .hero {
     flex-direction: column;
     background-image: linear-gradient(white, #ffd449);
 }
-.container3 img{
+.weather img{
     width: 30%; 
     
 }
-h3 {
+.weather .wea, p{
     text-align: center;
-    text-decoration:underline;
-    font-family: 'Otomanopee One', sans-serif;;
+    font-size:small;
 }
-.container3 .wea, p{
-    margin:0.2rem;
-    text-align: center;
-    font-size: large;
-    font-weight: bolder;
-}
-.container3 h4{
+.weather h4{
+    margin:0;
     font-size: 16px;
     text-decoration: underline;
     font-weight: bold;
     font-family: 'Otomanopee One', sans-serif;
 }
-.container4{
+.join{
    display:none;
+   padding:20px;
 }
-.container5{
+.spotlights{
     padding:20px;
-}
-.container5 div{
     display: grid;
     grid-template-rows: 1fr 1fr;
+
+}
+.spotlights div{
     border:#104911;
     border: 1px solid #104911;
     padding:40px;
    
 }
-.container5 div#spot3{
+#spot3{
     display:none;
 }
 /*discover main*/
+.discover main .places h3{
+    text-align:center;
+}
 .discover main{
     display: block;
-    max-width: 1300px;
+    max-width: 1000px;
     margin: 0 auto;
     border: 10px solid #F9A620;
     margin-top: 20px;
     padding-left: 10px;
     padding-right: 15px;
     text-align: justify;
+    border-radius: 5px 5px 5px 5px;
 }
 .discover h2 {
     text-align: center;
     font-family: 'Otomanopee One', sans-serif;;
 }
 .discover p{
-    font-size: 14px;
+    font-size: 12px;
     text-align:center;
 
 }
@@ -286,24 +288,41 @@ h3 {
 .numbvisits{
     padding:8px;
     font-family: Montserrat,sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
     font-weight: bold;
 } 
 /*join*/
+#join{
+    margin:0;
+    padding:0;
+    display:flex;
+    flex-direction: column;
+}
+legend {
+    text-align: center;
+}
 form {
-    max-width:400px;
+    display:flex;
+    flex-direction: column;
 }
 fieldset {
     background-color:#ffd449 ;
     border:2px solid #104911;
     font-family: Montserrat, sans-serif;
     font-weight: bold;
-    width:100%
+    font-size: 12px;
+    margin: 0;
+    border: 3px solid rgb(4, 82, 52);
+    border-radius: 10px;
 }
 fieldset h4{
     font-family: 'Otomanopee One', sans-serif;
-    font-size: 24px;
+    font-size: 16px;
+}
+form #mblevel{
+    display:flex;
+    flex-direction: column;
 }
 form .submitBtn {
     background-color: #257705;
@@ -313,27 +332,26 @@ form .submitBtn {
     border-radius: 10px;
     font-weight: bold;
     margin-top: 20px;
-    
+    width:50%;
+    align-self: center;   
 }
-form fieldset{
-    margin: 0;
-    border: 3px solid rgb(4, 82, 52);
-    border-radius: 10px;
-    max-width: 400px;
+form .submitBtn:hover {
+    opacity: 1;
+	background-color: rgb(236, 240, 16);
+    color: #0f0f0f ;
+    background-image: linear-gradient(white, #104911);
 }
-form fieldset textarea{
-    max-width: 390px;
-}
-form fieldset #npmember, #brmember, #silmember, #golmember{
+#join-benefits .benefit{
     border: 2px solid black;
+    margin:0;
     margin-top:10px;
     border-radius: 10px;
     padding: 5px;
     background-color:#a7dd91;
 }
-form fieldset h5 {
+#join-benefits .benefit h5 {
     text-align: center;
-    font-size: 24px;
+    font-size: 18px;
     background-color: #257705;
     color:antiquewhite;
     margin-top:10px;
@@ -341,16 +359,21 @@ form fieldset h5 {
 }
 form fieldset p {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 12px;
     font-style: normal;
 }
 form fieldset .field{
     padding:5px;
-  
 }
-form fieldset .field input{
-    border-radius: 5px;
+form fieldset label, form fieldset .field textarea{
     display: block;
+    border-radius: 5px;
+    width: 100%;
+    margin-bottom: .2rem ;
+    margin-top: .2rem;
+}
+form fieldset .field input, form fieldset .field textarea {
+    border-radius: 5px;
     padding: 0.5rem;
     width: 95%;
     margin-bottom: 0.5rem ;
@@ -358,6 +381,15 @@ form fieldset .field input{
 }
 form fieldset .field input:required {
     border: 1px solid red
+}
+#join-benefits .benefit p{
+    font-size: 12px;
+    font-style: italic;
+    font-weight: bold;
+}
+#join-benefits .benefit ul li{
+    font-size:12px;
+    padding: 0.1rem;
 }
 /*footer*/
 footer{
@@ -377,7 +409,7 @@ footer p {
 }
 #site-logo-footer img {
     margin-top:20px;
-    width:7rem;
+    width:5rem;
     height:auto;
     padding-left: 30px;
     margin-right: 30px;
@@ -393,6 +425,12 @@ footer p {
  }
 #contact{
     margin-top: 20px;
+}
+.site-name-footer h3{
+    display:block;
+    font-size:16px;
+    text-align: center;
+    margin:0;
 }
 #signature-medium {
     display:none;
@@ -449,16 +487,56 @@ h4 {
     grid: gap 0.2rem;
     margin: 0 auto;
     border: 5px solid #F9A620;
+    border-radius: 5px 5px 5px 5px;
     margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 20px;
     padding-bottom: 10px;
     text-align: justify;
+    margin-left: 10px;
+    margin-right:10px;
     
 }
 .business-cards img{
     width: 30%;
     border-radius: 2px;
     margin-top:0.5rem;
+}
+/*contact page*/
+#contact-us {
+    margin:0;
+    padding:0;
+    display:grid;
+    grid-template-columns: 1fr;
+    position: relative;
+}
+#contact-us .banner-content .action{
+    background-color: rgba(240, 240, 240, 0.6);
+    margin: 0.1rem 1rem 6rem 1rem;
+    padding: 0.1rem;
+    padding-top:0.8rem;
+    text-align: center;
+    position: absolute;
+    left: 46%;
+    bottom: 60%;
+    width:80%;
+    transform: translate(-50%, -50%);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#contact-us .banner-content .action h5{
+    padding-left:0.8rem;
+}
+/*thank you*/
+#thankyou .submitted{
+    margin: 40px auto 60px auto;
+    max-width: 700px;
+    background-image: linear-gradient(white, #ffd449);
+    padding: 10px 30px;
+    border-radius: 5px;
+    padding-bottom: 30px;
+  
+}
+#thankyou .submitted p{
+    font-size:12px;
 }
