--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -68,7 +68,11 @@
     .release {
         grid-column: 1/4;
     }
+    .release ul li{
+        font-size: 14px;
+    }
     .spotlights{
+        background-image: linear-gradient(white, #ffd449);
         grid-row: 3;
         grid-column: 1/4;
         display:grid;
@@ -80,18 +84,33 @@
         padding:auto;
     }
     .join{
+        background-image: linear-gradient(white, #ffd449, #c56317f3 );
         display: grid;
         grid-row:4;
         grid-column: 1/4;
     }
+    .join img{
+        width:10%;
+    }
+    .join p{
+        font-size:14px;
+    }
     
     .event{
+        background-image: linear-gradient(white, #c56317f3, #2aa02c);
         grid-row:5;
         grid-column: 1/3;
         margin-right:0px;
         
     }
+    .event p{
+        font-size: 14px;
+    }
+    .event img{
+        width:20%
+    }
     .weather {
+        background-image: linear-gradient(white, #c56317f3, #2aa02c);
         grid-row:5;
         margin-left:0px;
     }
