--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -42,14 +42,19 @@
 		max-width: 1200px;
 		margin: 10px auto
 	}
+	
 	.event{
 		background-image: linear-gradient(white, #ffd449);
 		grid-column:1;
 		grid-row:1;
 		margin-right:0px;
+		
 	}
 	.event p{
 		font-size: 16px;
+	}
+	.event img{
+		width:30%;
 	}
 	.weather {
 		background-image: linear-gradient(white, #ffd449, #c56317f3 );
@@ -57,6 +62,7 @@
 		grid-row:2;
 		margin-left:20px;
 		margin-right:0px;
+		
 	}
 	.weather p{
 		font-size: 16px;
@@ -67,6 +73,7 @@
 		grid-row:3;
 		margin-right:0px;
 		background-image: linear-gradient(white, #c56317f3, #2aa02c);
+		
 	}
 	.join img{
 		width:30%;
@@ -94,13 +101,13 @@
 		grid-template-columns: 1fr;
 		grid-template-rows: repeat(3, 1fr);
 		grid-auto-rows: minmax(100px, auto);
-        padding: 30px;
+        padding: 10px;
 		margin-left:0px;
 		grid-gap:0px;
 		background-image: linear-gradient(white, #c56317f3, #2aa02c);
 		
 	}
-	.spotlights div#spot3{
+	.spotlights div.spotlight3{
 		display:block;
 		grid-row:3;
 		
@@ -110,6 +117,9 @@
     	border: 1px solid #104911;
         padding: 15px;
 		margin:0px;	
+	}
+	.spotlights img{
+		width:30%;
 	}
 	.hero-section .hero {
 		min-height: 12rem;
